[gd_scene load_steps=11 format=3 uid="uid://bmq518ae0ujep"]

[ext_resource type="Script" uid="uid://f6pk1cxdjw6k" path="res://scripts/menu.gd" id="1_menu"]
[ext_resource type="Texture2D" uid="uid://c6gsghd5bk3co" path="res://assets/UI/PNG/menu/bg.png" id="2_bg"]
[ext_resource type="Script" uid="uid://dncb4bwivv5sp" path="res://scripts/texture_button_animation.gd" id="2_texture_btn_anim"]
[ext_resource type="Script" uid="uid://fm2gpt5r6725" path="res://scripts/button_animation.gd" id="3_btn_anim"]
[ext_resource type="Texture2D" uid="uid://bfhe0admibmtr" path="res://assets/UI/PNG/menu/logo.png" id="3_logo"]
[ext_resource type="Texture2D" uid="uid://c6wlgyaoooe32" path="res://assets/UI/PNG/btn/play.png" id="4_play"]
[ext_resource type="Texture2D" uid="uid://38eq1pht6j7u" path="res://assets/UI/PNG/btn/settings.png" id="5_settings"]
[ext_resource type="Texture2D" uid="uid://8m4l23vsjsp3" path="res://assets/UI/PNG/btn/close.png" id="6_close"]
[ext_resource type="Texture2D" uid="uid://dsirdvfjc21qd" path="res://assets/UI/PNG/settings/bg.png" id="7_setbg"]
[ext_resource type="Texture2D" uid="uid://bkb764rb13q6j" path="res://assets/UI/PNG/settings/table.png" id="8_settable"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -350.0
offset_right = 250.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_logo")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -957.0
offset_top = -74.0
offset_right = 957.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_play")
stretch_mode = 5
script = ExtResource("2_texture_btn_anim")

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_settings")
stretch_mode = 5
script = ExtResource("2_texture_btn_anim")

[node name="InventoryButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Инвентарь"
script = ExtResource("3_btn_anim")

[node name="StatsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Статистика"
script = ExtResource("3_btn_anim")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_close")
stretch_mode = 5
script = ExtResource("2_texture_btn_anim")

[node name="SettingsPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsBackground" type="TextureRect" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_setbg")
expand_mode = 1
stretch_mode = 6

[node name="SettingsTable" type="TextureRect" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_settable")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsTitle" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Настройки"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="SettingsLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Настройки будут добавлены позже"
horizontal_alignment = 1

[node name="BackButton" type="TextureButton" parent="SettingsPanel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
texture_normal = ExtResource("6_close")
stretch_mode = 5
script = ExtResource("2_texture_btn_anim")

[node name="InventoryPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryTitle" type="Label" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
text = "Инвентарь"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="InventoryPanel/VBoxContainer"]
layout_mode = 2
text = "Инвентарь будет добавлен позже"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="InventoryPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Назад"
script = ExtResource("3_btn_anim")

[node name="StatsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsTitle" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Статистика"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="StatsPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "Статистика будет добавлена позже"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="StatsPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Назад"
script = ExtResource("3_btn_anim")
